--- a/apps/frontend/src/app/componentes/pagina-privada/pagina-privada.component.html
+++ b/apps/frontend/src/app/componentes/pagina-privada/pagina-privada.component.html
@@ -1,4 +1,4 @@
-<diannemormont-header></diannemormont-header>
+<app-header></app-header>
 <div class="container mt-5"></div>
   <h2 class="font-weight-bold">Lista de Productos</h2>
   <table class="table">
@@ -45,4 +45,4 @@
     </tbody>
   </table>
 <br>
-<diannemormont-footer></diannemormont-footer>
+<app-footer></app-footer>
