--- a/apps/frontend/src/app/componentes/producto/product.component.html
+++ b/apps/frontend/src/app/componentes/producto/product.component.html
@@ -1,4 +1,4 @@
-<diannemormont-header></diannemormont-header>
+<app-header></app-header>
 <div class="container">
   <br>
   <br>
@@ -20,4 +20,4 @@
     </div>
   </div>
 </div>
-<diannemormont-footer></diannemormont-footer>
+<app-footer></app-footer>
