--- a/apps/frontend/src/app/componentes/registro/registro.component.html
+++ b/apps/frontend/src/app/componentes/registro/registro.component.html
@@ -1,4 +1,4 @@
-<diannemormont-header></diannemormont-header>
+<app-header></app-header>
 <div class="row justify-content-center">
 <div class="container">
     <h2>Registre sus datos</h2>
@@ -28,4 +28,4 @@
   </div>
 </div>
 <br>
-<diannemormont-footer></diannemormont-footer>
+<app-footer></app-footer>
