--- a/apps/frontend/src/app/componentes/usuario-privado/usuario-privado.component.html
+++ b/apps/frontend/src/app/componentes/usuario-privado/usuario-privado.component.html
@@ -1,4 +1,4 @@
-<diannemormont-header-admin></diannemormont-header-admin>
+<app-header-admin></app-header-admin>
 <div class="container mt-5">
   <h2 class="font-weight-bold">Lista de Usuarios</h2>
   <table class="table">
@@ -33,4 +33,4 @@
 <br>
 <br>
 <br>
-<diannemormont-footer></diannemormont-footer>
+<app-footer></app-footer>
