--- a/apps/frontend/src/app/componentes/vision/vision.component.html
+++ b/apps/frontend/src/app/componentes/vision/vision.component.html
@@ -1,4 +1,4 @@
-<diannemormont-header></diannemormont-header>
+<app-header></app-header>
 <div class="container">
     <div class="row">
       <div class="col-md-6">
@@ -21,4 +21,4 @@
   <br>
   <br>
   <br>
-  <diannemormont-footer></diannemormont-footer>
+  <app-footer></app-footer>
