--- a/apps/frontend/src/app/componentes/contact-privado/contact-privado.component.html
+++ b/apps/frontend/src/app/componentes/contact-privado/contact-privado.component.html
@@ -1,4 +1,4 @@
-<diannemormont-header-admin></diannemormont-header-admin>
+<app-header-admin></app-header-admin>
 <div class="container mt-5"></div>
 <h2 class="font-weight-bold">Lista de contactos</h2>
 <table class="table">
@@ -23,5 +23,5 @@
 <br>
 <br>
 <br>
-<diannemormont-footer></diannemormont-footer>
+<app-footer></app-footer>
 
