--- a/apps/frontend/src/app/componentes/contactenos/contactenos.component.html
+++ b/apps/frontend/src/app/componentes/contactenos/contactenos.component.html
@@ -1,4 +1,4 @@
-<diannemormont-header></diannemormont-header>
+<app-header></app-header>
 <div class="row justify-content-center">
 <div class="container">
     <h2>Complete el formulario</h2>
@@ -26,4 +26,4 @@
 <br>
 <br>
 <br>
-<diannemormont-footer></diannemormont-footer>
+<app-footer></app-footer>
