--- a/apps/frontend/src/app/componentes/home/home.component.html
+++ b/apps/frontend/src/app/componentes/home/home.component.html
@@ -1,18 +1,10 @@
 <app-header></app-header>
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<app-footer></app-footer>
+<app-banner></app-banner>
+<app-about></app-about>
+<app-categories></app-categories>
+<div class="section products-section">
+    <app-products></app-products>
+</div>
+<app-cta></app-cta>
+<app-instagram></app-instagram>
+<app-footer [layout]="classname" [logo]="ftlogo"></app-footer>
