--- a/apps/frontend/src/app/componentes/public/home/banner/banner.component.html
+++ b/apps/frontend/src/app/componentes/public/home/banner/banner.component.html
@@ -17,7 +17,7 @@
                                     <i class="fa-solid fa-fire-flame-curved"></i>
                                     <div class="banner-icon-body">
                                         <h5>{{item.calories}}</h5>
-                                        <span>Calories</span>
+                                        <span>Calorias</span>
                                     </div>
                                 </div>
                                 <div class="banner-icon">
@@ -29,7 +29,7 @@
                                 </div>
                             </div>
                             <div class="banner-controls">
-                                <a routerLink="/menu-order/{{item.id}}" class="btn-custom primary">Order <i class="fa-solid fa-basket-shopping"></i> </a>
+                                <a routerLink="/menu-order/{{item.id}}" class="btn-custom primary">Ordenar <i class="fa-solid fa-basket-shopping"></i> </a>
                                 <h4>${{item.price | number:'1.2-2'}}</h4>
                             </div>
                         </div>
