--- a/apps/frontend/src/app/componentes/public/home/products/products.component.html
+++ b/apps/frontend/src/app/componentes/public/home/products/products.component.html
@@ -1,10 +1,9 @@
 <div class="container">
     <div class="section-title-wrap section-header text-center">
-        <h5 class="custom-primary">Trending</h5>
-        <h2 class="title">Our Customers' Top Picks</h2>
+        <h5 class="custom-primary">Tendecia</h5>
+        <h2 class="title">las mejores opciones de nuestros clientes</h2>
         <p class="subtitle">
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-            industry's standard dummy
+            Encontraras las pizas mas exquisitas y queridas por todas 
         </p>
     </div>
     <ngx-slick-carousel #slickModal="slick-carousel" [config]="settings" class="product-slider">
