--- a/apps/frontend/src/app/componentes/public/cart/content/cartcontent.component.html
+++ b/apps/frontend/src/app/componentes/public/cart/content/cartcontent.component.html
@@ -71,7 +71,7 @@
                         </tr>
                     </tbody>
                 </table>
-                <button type="submit" class="btn-custom primary btn-block">Continuar con el pago</button>
+                <button type="submit" routerLink="/checkout/" class="btn-custom primary btn-block" >Continuar con el pago</button>
             </div>
         </div>
         <!-- Cart form End -->
