--- a/apps/frontend/src/app/componentes/public/home/cta/cta.component.html
+++ b/apps/frontend/src/app/componentes/public/home/cta/cta.component.html
@@ -7,6 +7,6 @@
                 Encontratas las pizas mas exquisitas del mercado
             </p>
         </div>
-        <a routerLink="/menu-v1" class="btn-custom shadow-none">Hacer pedido</a>
+        <a routerLink="/Checkout" class="btn-custom shadow-none">Hacer pedido</a>
     </div>
 </div>
