--- a/apps/frontend/src/app/shared/footer/footer.component.html
+++ b/apps/frontend/src/app/shared/footer/footer.component.html
@@ -34,10 +34,9 @@
                   </ul>
               </div>
               <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12 footer-widget">
-                  <h5 class="widget-title">Social Media</h5>
+                  <h5 class="widget-title">Redes sociales</h5>
                   <ul class="social-media">
                       <li> <a href="#" class="facebook"> <i class="fab fa-facebook"></i> </a> </li>
-                      <li> <a href="#" class="pinterest"> <i class="fab fa-pinterest"></i> </a> </li>
                       <li> <a href="#" class="google"> <i class="fab fa-google"></i> </a> </li>
                       <li> <a href="#" class="twitter"> <i class="fab fa-twitter"></i> </a> </li>
                   </ul>
@@ -50,14 +49,14 @@
   <div class="footer-bottom">
       <div class="container">
           <ul>
-              <li> <a href="#">Privacy Policy</a> </li>
-              <li> <a href="#">Refund Policy</a> </li>
-              <li> <a href="#">Cookie Policy</a> </li>
-              <li> <a href="#">Terms & Conditions</a> </li>
+              <li> <a href="#">Politicas de privacidad</a> </li>
+              <li> <a href="#">Politicas de reembolso</a> </li>
+              <li> <a href="#">Politica de cookies</a> </li>
+              <li> <a href="#">Terminos y condiciones</a> </li>
           </ul>
           <div class="footer-copyright">
-              <p> Copyright &copy; 2023 <a href="#">Diana Orozco</a> All Rights Reserved. </p>
-              <a href="javascript:void(0);" class="back-to-top"id="backToTop" (click)="gotoTop()" (window:scroll)="ScrolltoTop()">Back to top <i class="fas fa-chevron-up"></i> </a>
+              <p><a href="#">Diana Orozco</a> Todos los derechos</p>
+              <a href="javascript:void(0);" class="Volver al inicio"id="Volveralinicio" (click)="gotoTop()" (window:scroll)="ScrolltoTop()">Volver al inicio<i class="fas fa-chevron-up"></i> </a>
           </div>
       </div>
   </div>
